# jigsaw_clues

./: README.md  pyproject.toml
app/: __init__.py  config.py  data.py  main.py
app/core/: state.py  timer.py  websocket_manager.py
app/models/: game.py
app/services/: mqtt_service.py
app/static/: app.js  style.css
app/templates/: index.html
pi_clients/: README.md  common.py  device_profiles.py  run_client.py
