[project]
name = "jigsaw-clues"
version = "0.1.0"
description = "Control interface for the Jigsaw escape room system"
requires-python = ">=3.10"
authors = [{name = "Escape Control"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "paho-mqtt>=1.6",
    "pydantic>=2.6",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=7.4"
]

[tool.uvicorn]
factory = "app.main:create_app"
port = 8000
host = "0.0.0.0"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
